Further improvements to loading display

--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -140,6 +140,12 @@
 			#nav.error .search.highlighted .right{
 				background-image: url(../html/img/searchredH.png);
 			}
+			#nav.error .search.highlighted .center{
+				background-image: url(../html/img/searchmiddlered.png);
+			}
+			#nav.error .search.highlighted .left{
+				background-image: url(../html/img/searchleftR.png);
+			}
 		</style>
 		<script type="text/javascript" src="jslib/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="jslib/comm.js"></script>
