--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -360,7 +360,8 @@
 		}
 
 		errors = {
-			'connection':'<p>You\'ve been disconnected.</p><p>Check your internet connection to see you don\'t have anything unplugged, or your wifi is still working.</p>'
+			'connection':'<p>You\'ve been disconnected.</p><p>Check your internet connection to see you don\'t have anything unplugged, or your wifi is still working.</p>',
+			'empty':'<p>This query/folder/thingy is empty.</p>'
 		}
 		function setError(id) {
 			$('#nav').removeClass('loading').addClass('error');
@@ -400,6 +401,7 @@
 				digest = digests[i];
 				$(renderDigest(digest)).appendTo('#mainlist');
 				}
+			if (digests.length == 0) setError('empty');
 			if (useLongEnd) {
 				appendLongEnd(
 					function(){},
@@ -488,6 +490,7 @@
 			for (i in contacts) {				
 				$('<li></li>').append(renderContact(contacts[i])).appendTo('#mainlist');
 			}
+			if (contacts.length == 0) setError('empty');
 			if (useLongEnd) {
 				appendLongEnd(function(){});
 			}
