--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -157,7 +157,7 @@
 		</script>
 	</head>
 
-	<body class ="noselect">
+	<body class ="noselect" onselectstart="return false">
 		<div id="nav">
 			<div class="top">
 				<table class="textbutton noselect"><tr>
