Gear icon (clumsy) added

--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -188,7 +188,7 @@
 					<li class="storage gotoArchive"><div>Archive</div></li>
 					<li class="contacts gotoContacts"><div>Contacts</div></li>
 					<li class="folder"><div>Folders</div></li>
-					<li class="folder gotoOptions"><div>Options</div></li>
+					<li class="gear gotoOptions"><div>Options</div></li>
 					<li class="more">...</li>
 				</ul>
 				<ul class="contactselect invisible">
