--- a/gui/html/waveviewer.html
+++ b/gui/html/waveviewer.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/textbutton.css">
 		<link rel="stylesheet" type="text/css" href="css/searchinput.css">
 		<link rel="stylesheet" type="text/css" href="css/toolbar.css">
@@ -111,6 +110,10 @@
 				border-color:#444;
 			}
 
+			#mainlist.document li.selected {
+				border-color: #348;
+			}
+
 			#mainlist li.unread > img.creator_avatar {
 				border-width:2px;
 				top:-4px;
@@ -135,6 +138,8 @@
 
 			#nav .top {height:24px;}
 		</style>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+
 		<script type="text/javascript" src="jslib/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="jslib/comm.js"></script>
 		<script type="text/javascript">
@@ -158,14 +163,14 @@
 					<li class="reply"><div>Reply</div></li>
 					<li class="eye-open"><div>Mark as Unread</div></li>
 					<li class="trash"><div>Delete</div></li>
-					<li class="arrow"><div>Export to New Wave</div></li>
+					<li class="export"><div>Pop Out</div></li>
 					<li class="more">...</li>
 				</ul>
 				<ul class="invisible multiselect">
 					<li class="arrow"><div>Next</div></li>
 					<li class="eye-open"><div>Mark as Unread</div></li>
 					<li class="trash"><div>Delete</div></li>
-					<li class="arrow"><div>Export to New Wave</div></li>
+					<li class="export"><div>Pop Out</div></li>
 					<li class="more">...</li>
 				</ul>
 				<ul class="nonselect">
@@ -240,11 +245,6 @@
 			</div>
 		</div>
 	</div>
-
-	<div class='tooltip invisible'>
-		<div class='contents'>Blah b</div>
-		<div class="target"></div>
-	</div>
 	<div class="scrollregion"><div class="scrollbar"></div><div class="clickable"></div></div>
 	<script type="text/javascript" src="jslib/searchinput.js"></script>
 	<script type="text/javascript" src="jslib/toolbar.js"></script>
@@ -254,7 +254,7 @@
 	<script type="text/javascript" src="jslib/jquery.mousewheel.js"></script>
 	<script type="text/javascript" src="jslib/scroll.js"></script>
 	<script type="text/javascript">
-		// bindScrollbar($('.scrollbar'),objecttobindto)
+		bindScrollbar($('.scrollbar'),$('#mainlist'))
 
 		function checkSelect() {
 			if ($('#mainlist li.editing').length >0){
